# dtoa

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs
chart/: performance.tex
src/: diyf32.rs  diyf64.rs  diyfp.rs  dtoa.rs  f32toa.rs  f64toa.rs  lib.rs
tests/: test.rs
