[package]
name = "dtoa"
version = "1.0.2" # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["value-formatting", "no-std"]
description = "Fast floating point primitive to string conversion"
documentation = "https://docs.rs/dtoa"
edition = "2018"
exclude = ["performance.png", "chart/**"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dtolnay/dtoa"
rust-version = "1.36"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
