[package]
name = "dtoa"
version = "1.0.9" # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["value-formatting", "no-std", "no-std::no-alloc"]
description = "Fast floating point primitive to string conversion"
documentation = "https://docs.rs/dtoa"
edition = "2018"
exclude = ["performance.png", "chart/**"]
keywords = ["float"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/dtoa"
rust-version = "1.36"

[dependencies]
no-panic = { version = "0.1", optional = true }

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
