[package]
name = "dtoa"
version = "1.0.11"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["value-formatting", "no-std", "no-std::no-alloc"]
description = "Fast floating point primitive to string conversion"
documentation = "https://docs.rs/dtoa"
edition = "2021"
exclude = ["*.png", "chart/**"]
keywords = ["float"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/dtoa"
rust-version = "1.68"

[dependencies]
no-panic = { version = "0.1", optional = true }

[target.'cfg(not(miri))'.dev-dependencies]
criterion = { version = "0.8", default-features = false }

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--generate-macro-expansion",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
]
